--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "@lukemorales/query-key-factory": "^1.3.2",
     "@mui/material": "^5.14.20",
     "@tanstack/react-query": "^5.12.2",
+    "@types/node": "^20.10.4",
     "axios": "^1.6.2",
     "husky": "^8.0.3",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
