feat: create questions answer component

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^5.12.2",
     "@types/node": "^20.10.4",
     "axios": "^1.6.2",
+    "ckeditor": "link:ckeditor5-luongthanhnhi-custom-build/build/ckeditor",
     "husky": "^8.0.3",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
@@ -38,7 +39,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.1",
+    "styled-components": "^6.1.6",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
